adding button css

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>CSULB Dining Hall Tracker</title>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
   </head>
 
   <body>
@@ -29,7 +30,14 @@
           <td>Beachside</td>
       </tr>
   </table>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <div>
+      <button class="cycles" type="button">Cycle 1</button>
+      <button class="cycles c2" type="button">Cycle 2</button>
+      <button class="cycles c3" type="button">Cycle 3</button>
+      <button class="cycles c4" type="button">Cycle 4</button>
+      <button class="cycles c5" type="button">Cycle 5</button>
+    </div>
     <div id="roosdt"></div>
   </body>
 
