--- a/public/index.html
+++ b/public/index.html
@@ -22,16 +22,13 @@
   </head>
 
   <body>
-    <h1> CSULB Dining Hall Tracker</h1> <p> Please select a dining hall.</p>
-    <table>
-      <tr>
-          <td>Hillside</td>
-          <td>Parkside</td>
-          <td>Beachside</td>
-      </tr>
-  </table>
+    <h1> CSULB Dining Hall Tracker</h1>
+    <hr>
+    <p> Please select a <span style="color:#ffc72a"> dining hall </span> and <span style="color:#ffc72a">meal cycle </span>.</p>
 
-    <div>
+    <h1 id="root"></h1> <!-- Dining Hall Buttons-->
+    
+    <div style="text-align: center;">
       <button class="cycles" type="button">Cycle 1</button>
       <button class="cycles c2" type="button">Cycle 2</button>
       <button class="cycles c3" type="button">Cycle 3</button>
@@ -39,6 +36,53 @@
       <button class="cycles c5" type="button">Cycle 5</button>
     </div>
     <div id="roosdt"></div>
+    <script type="text/JavaScript" src="../src/dining_halls.js"></script>
+   
+    <h1 id="buttons">hi</h1>
+
+    <h1 class="linebreak"></h1>
+    <table>
+      <tr>
+        <th></th>
+        <th>Monday</th>
+        <th>Tuesday</th>
+        <th>Wednesday</th>
+        <th>Thursday</th>
+        <th>Friday</th>
+        <th>Saturday</th>
+        <th>Sunday</th>
+      </tr>
+      <tr>
+        <th>Breakfast</th>
+        <td>food</td>
+        <td>food</td>
+        <td>food</td>
+        <td>food</td>
+        <td>food</td>
+        <td>food</td>
+        <td>food</td>
+      </tr>
+        <tr>
+          <th>Lunch/Brunch</th>
+          <td>food</td>
+          <td>food</td>
+          <td>food</td>
+          <td>food</td>
+          <td>food</td>
+          <td>food</td>
+          <td>food</td>
+        </tr>
+      </tr>
+        <th>Dinner</th>
+        <td>food</td>
+        <td>food</td>
+        <td>food</td>
+        <td>food</td>
+        <td>food</td>
+        <td>food</td>
+        <td>food</td>
+      </tr>
+    </table>
   </body>
 
 </html>
